# ic-validator-ingress-message-wasm32

./: Cargo.toml  wrangler.toml
src/: lib.rs
